...
                GoalParameterList(parameters)
                PrimaryButton(
                    modifier = Modifier.fillMaxWidth(),
                    onClick = onAddWorkout,
                    contentPadding = PaddingValues(horizontal = 18.dp, vertical = 14.dp)
                ) {
                    Text("+ Add Workout")
                }
            }

            Column(
                modifier = Modifier.fillMaxWidth(),
                verticalArrangement = Arrangement.spacedBy(16.dp)
...
                    },
                    shape = RoundedCornerShape(0.dp),
                    colors = buttonColors,
                    border = BorderStroke(1.dp, MaterialTheme.colorScheme.outline),
                    icon = {}
                ) {
                    Text("Active")
                }
                SegmentedButton(
                    checked = goalStatus == GoalStatus.COMPLETED,
                    onCheckedChange = {
                        onSwitchState(GoalStatus.COMPLETED)
                    },
...
