...
                title = {
                    Row(
                        modifier = Modifier.fillMaxWidth(),
                        horizontalArrangement = Arrangement.SpaceBetween,
                        verticalAlignment = Alignment.CenterVertically
                    ) {
                        Text("Workouts")

                        val colors = SegmentedButtonDefaults.colors(
                            inactiveContainerColor = AppColor.bg,
                            activeContainerColor = AppColor.surface
                        )
                        SingleChoiceSegmentedButtonRow {
...
                                selected = selectedView == WorkoutView.LIST,
                                colors = colors,
                                icon = {},
                                contentPadding = PaddingValues(0.dp)
                            ) {
                                Text(
                                    "List",
                                    style = MaterialTheme.typography.bodyMedium,
                                    fontSize = AppText.sm
                                )
                            }
                            SegmentedButton(
                                onClick = { selectedView = WorkoutView.CALENDAR },
...
                                selected = selectedView == WorkoutView.CALENDAR,
                                colors = colors,
                                icon = {},
                                contentPadding = PaddingValues(0.dp),
                            ) {
                                Text(
                                    "Calendar",
                                    style = MaterialTheme.typography.bodyMedium,
                                    fontSize = AppText.sm
                                )
                            }
                        }
                    }
...
                            .height(200.dp)
                            .border(1.dp, AppColor.border, RoundedCornerShape(AppRadius.md))
                            .background(AppColor.surface, RoundedCornerShape(AppRadius.md)),
                        contentAlignment = Alignment.Center
                    ) {
                        Text(
                            "Calendar view coming soon",
                            style = MaterialTheme.typography.bodyMedium,
                            color = AppColor.muted
                        )
                    }
                }
            }
...
