...
        Row(
            modifier = Modifier.fillMaxWidth(),
            horizontalArrangement = Arrangement.SpaceAround
        ) {
            BottomNavItem(
                icon = Res.drawable.home,
                contentDescription = "Home menu",
                isSelected = currentScreen.value == HomeRoute.Home,
                onClick = { navigation.setRoot(HomeRoute.Home) }
            )
            BottomNavItem(
                icon = Res.drawable.goals,
                contentDescription = "Goals menu",
...
